--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,71 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.hide-menu {
+  max-width: 0;
+  transition: all 0.25s;
+  overflow: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.show-menu {
+  max-width: 25%;
+  transition: all 0.25s;
+}
+
+.hide-height {
+  max-height: 0;
+  transition: all 0.5s;
+  overflow: hidden;
+}
+
+.show-height {
+  max-height: 20rem;
+  transition: all 0.5s;
+}
+
+li {
+  cursor: pointer;
+}
+
+li:hover {
+  text-decoration: underline;
+}
+
+li:first-child {
+  padding-left: 1rem;
+  font-weight: 600;
+}
+
+li:not(:first-child) {
+  padding-left: 2rem;
+}
+
+tr,
+td {
+  border: 1px solid #8492a6;
+  text-align: center;
+}
+
+td {
+  padding: 10px;
+}
+
+@media only screen and (max-width: 769px) {
+  html {
+    font-size: 90%;
+  }
+  .show-menu {
+    max-width: fit-content;
+    position: fixed;
+    height: 100%;
+    transform: translateX(0);
+  }
+
+  .hide-menu {
+    transform: translateX(-100%);
+    position: fixed;
+    max-width: fit-content;
+    height: 100%;
+  }
 }
