--- a/src/index.css
+++ b/src/index.css
@@ -53,8 +53,9 @@ td {
 }
 
 .custom-bg {
-  background: url("./images/digital.webp");
+  background: url("./images/background.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
   background-position: center;
 }
 
